refresh wasnt working because was deleting class the move was connected to

--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -31,9 +31,9 @@
 
 
 <body class="noScroll">
-<!--
-<button class="test">ClickMe</button>
--->
+
+<!-- <button class="test">ClickMe</button> -->
+
 
 
 
