use other website contact page

--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -645,7 +645,7 @@ in 4.3.1 need use order and offset
         </div>
         <div class="col-sm-4 " data-toggle="tooltip" data-placement="right" title="contact me link">
           <!--replace with other website contact form-->
-          <a href="mailto:philip.r.tate@gmail.com?&subject=Cool%20website%20we%20want%20to%20offer%20you%20a%20job&body=Amazing%20job%20goes%20here!">
+          <a href="https://phy5prt.github.io/BootstrapPortfolioWebsite/contactMe/contactMe.html" target="_blank">
           <i class="far fa-envelope corner-links"></i></a>
 
 
