jquery no caps bootstrap no caps renaming marbles in case

--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -144,17 +144,18 @@ also cause a white space at bottom because now contributes to the height-->
 
         <ul class="myflex-container">
 
-          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech">   <div class="aMarble aMarbleGlassEffect"value="Codepen"><img class="aMarbleImg " src="Images\marbles\codepen.png" alt="codepen marble" ></div></li>
-          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"><div class="aMarble aMarbleGlassEffect"value="Atom"><img class="aMarbleImg " src="Images\marbles\atom-4-logo-png-transparent.png" alt="atom marble"></div></li>
-          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"><div class="aMarble aMarbleGlassEffect"value="C#"><img class="aMarbleImg " src="Images\marbles\Csharp_logo.png" alt="csharp marble"></div></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use JQuery">   <div class="aMarble aMarbleGlassEffect"value="jquery"><img class="aMarbleImg " src="Images\marbles\jquery.png" alt="JQuery marble" ></div></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Javascript"><div class="aMarble aMarbleGlassEffect"value="javascript"><img class="aMarbleImg " src="Images\marbles\javascript.png" alt="Javascript marble"></div></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use C#"><div class="aMarble aMarbleGlassEffect"value="cSharp"><img class="aMarbleImg " src="Images\marbles\cSharp.png" alt="C# marble"></div></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use CSS"><div class="aMarble aMarbleGlassEffect"value="css"><img class="aMarbleImg " src="Images\marbles\css.png" alt="CSS marble"></div></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use HTML"><div class="aMarble aMarbleGlassEffect"value="html"><img class="aMarbleImg " src="Images\marbles\html.png" alt="HTML marble"></div></li>
 
-          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"><div class="aMarble aMarbleGlassEffect"value="CSS"><img class="aMarbleImg " src="Images\marbles\css.png" alt="css marble"></div></li>
-          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"><div class="aMarble aMarbleGlassEffect"value="EJS"><img class="aMarbleImg " src="Images\marbles\ejslandscape.png" alt="ejs marble"></div></li>
-          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"><div class="aMarble aMarbleGlassEffect"value="Git"><img class="aMarbleImg " src="Images\marbles\git.png" alt="git marble"></div></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use EJS"><div class="aMarble aMarbleGlassEffect"value="Git"><img class="aMarbleImg " src="Images\marbles\git.png" alt="git marble"></div></li>
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"><div class="aMarble aMarbleGlassEffect"value="Html"><img class="aMarbleImg " src="Images\marbles\html.png" alt="html marble"></li>
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"><div class="aMarble aMarbleGlassEffect"value="JS"><img class="aMarbleImg " src="Images\marbles\javascript-shield.png" alt="js marble"></div></li>
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"><div class="aMarble aMarbleGlassEffect"value="Mongo"><img class="aMarbleImg " src="Images\marbles\mongooselogo.jpg" alt="mongoose marble"></div></li>
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"><div class="aMarble aMarbleGlassEffect"value="nodeJS"><img class="aMarbleImg " src="Images\marbles\nodejs.png" alt="nodejs marble" ></div></li>
+
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"><div class="aMarble aMarbleGlassEffect"value="Unity"><img class="aMarbleImg " src="Images\marbles\unity.png" alt="unity marble" ></div></li>
 
         </ul>
