--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -143,6 +143,7 @@ also cause a white space at bottom because now contributes to the height-->
 
 
         <ul class="myflex-container">
+<!-- Techs and Language -->
 
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use JQuery">   <div class="aMarble aMarbleGlassEffect"value="jquery"><img class="aMarbleImg " src="Images\marbles\jquery.png" alt="JQuery marble" ></div></li>
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Javascript"><div class="aMarble aMarbleGlassEffect"value="javascript"><img class="aMarbleImg " src="Images\marbles\javascript.png" alt="Javascript marble"></div></li>
@@ -150,12 +151,20 @@ also cause a white space at bottom because now contributes to the height-->
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use CSS"><div class="aMarble aMarbleGlassEffect"value="css"><img class="aMarbleImg " src="Images\marbles\css.png" alt="CSS marble"></div></li>
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use HTML"><div class="aMarble aMarbleGlassEffect"value="html"><img class="aMarbleImg " src="Images\marbles\html.png" alt="HTML marble"></div></li>
 
-          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use EJS"><div class="aMarble aMarbleGlassEffect"value="Git"><img class="aMarbleImg " src="Images\marbles\git.png" alt="git marble"></div></li>
-          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"><div class="aMarble aMarbleGlassEffect"value="Html"><img class="aMarbleImg " src="Images\marbles\html.png" alt="html marble"></li>
-          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"><div class="aMarble aMarbleGlassEffect"value="JS"><img class="aMarbleImg " src="Images\marbles\javascript-shield.png" alt="js marble"></div></li>
-          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"><div class="aMarble aMarbleGlassEffect"value="Mongo"><img class="aMarbleImg " src="Images\marbles\mongooselogo.jpg" alt="mongoose marble"></div></li>
-          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"><div class="aMarble aMarbleGlassEffect"value="nodeJS"><img class="aMarbleImg " src="Images\marbles\nodejs.png" alt="nodejs marble" ></div></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use EJS"><div class="aMarble aMarbleGlassEffect"value="ejs"><img class="aMarbleImg " src="Images\marbles\ejs.png" alt="EJS marble"></div></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Bootstrap"><div class="aMarble aMarbleGlassEffect"value="bootstrap"><img class="aMarbleImg " src="Images\marbles\bootstrap.png" alt="Bootstrap marble"></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Mongo"><div class="aMarble aMarbleGlassEffect"value="mongo"><img class="aMarbleImg " src="Images\marbles\mongo.jpg" alt="MongoDB marble"></div></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use AWS"><div class="aMarble aMarbleGlassEffect"value="aws"><img class="aMarbleImg " src="Images\marbles\aws.png" alt="AWS marble"></div></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Unity"><div class="aMarble aMarbleGlassEffect"value="unity"><img class="aMarbleImg " src="Images\marbles\unity.png" alt="Unity marble" ></div></li>
 
+            <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use AJAX"><div class="aMarble aMarbleGlassEffect"value="ajax"><img class="aMarbleImg " src="Images\marbles\ajax.jpg" alt="AJAX marble" ></div></li>
+
+<!-- API  -->
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Google OAuth"><div class="aMarble aMarbleGlassEffect"value="googleOAuth"><img class="aMarbleImg " src="Images\marbles\googleOAuth.png" alt=" Google OAuth marble" ></div></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Google Map API"><div class="aMarble aMarbleGlassEffect"value="googleMapAPI"><img class="aMarbleImg " src="Images\marbles\googleMapAPI.png" alt="Google Map API marble" ></div></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use MailChimp API"><div class="aMarble aMarbleGlassEffect"value="mailChimp"><img class="aMarbleImg " src="Images\marbles\mailChimp.png" alt="mailChimp API marble" ></div></li>
+<!-- Tools -->
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"><div class="aMarble aMarbleGlassEffect"value="Unity"><img class="aMarbleImg " src="Images\marbles\unity.png" alt="unity marble" ></div></li>
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"><div class="aMarble aMarbleGlassEffect"value="Unity"><img class="aMarbleImg " src="Images\marbles\unity.png" alt="unity marble" ></div></li>
 
         </ul>
