--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -151,7 +151,9 @@ also cause a white space at bottom because now contributes to the height-->
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use CSS"><div class="aMarble aMarbleGlassEffect"value="css"><img class="aMarbleImg " src="Images\marbles\css.png" alt="CSS marble"></div></li>
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use HTML"><div class="aMarble aMarbleGlassEffect"value="html"><img class="aMarbleImg " src="Images\marbles\html.png" alt="HTML marble"></div></li>
 
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use NodeJS"><div class="aMarble aMarbleGlassEffect"value="nodeJS"><img class="aMarbleImg " src="Images\marbles\nodeJS.png" alt="NodeJS marble"></div></li>
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use EJS"><div class="aMarble aMarbleGlassEffect"value="ejs"><img class="aMarbleImg " src="Images\marbles\ejs.png" alt="EJS marble"></div></li>
+
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Bootstrap"><div class="aMarble aMarbleGlassEffect"value="bootstrap"><img class="aMarbleImg " src="Images\marbles\bootstrap.png" alt="Bootstrap marble"></li>
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Mongo"><div class="aMarble aMarbleGlassEffect"value="mongo"><img class="aMarbleImg " src="Images\marbles\mongo.jpg" alt="MongoDB marble"></div></li>
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use AWS"><div class="aMarble aMarbleGlassEffect"value="aws"><img class="aMarbleImg " src="Images\marbles\aws.png" alt="AWS marble"></div></li>
@@ -164,7 +166,10 @@ also cause a white space at bottom because now contributes to the height-->
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Google Map API"><div class="aMarble aMarbleGlassEffect"value="googleMapAPI"><img class="aMarbleImg " src="Images\marbles\googleMapAPI.png" alt="Google Map API marble" ></div></li>
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use MailChimp API"><div class="aMarble aMarbleGlassEffect"value="mailChimp"><img class="aMarbleImg " src="Images\marbles\mailChimp.png" alt="mailChimp API marble" ></div></li>
 <!-- Tools -->
-          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"><div class="aMarble aMarbleGlassEffect"value="Unity"><img class="aMarbleImg " src="Images\marbles\unity.png" alt="unity marble" ></div></li>
+    <!-- No Image-->      <!-- <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Mongo Atlas"><div class="aMarble aMarbleGlassEffect"value="mongoAtlas"><img class="aMarbleImg " src="Images\marbles\mongoAtlas.png" alt="Mongo Atlas marble" ></div></li> --> -->
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Postman"><div class="aMarble aMarbleGlassEffect"value="postman"><img class="aMarbleImg " src="Images\marbles\postman.png" alt="Postman marble" ></div></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Robo3T"><div class="aMarble aMarbleGlassEffect"value="robo3T"><img class="aMarbleImg " src="Images\marbles\robo3T.png" alt="Robo3T marble" ></div></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Trello"><div class="aMarble aMarbleGlassEffect"value="trello"><img class="aMarbleImg " src="Images\marbles\trello.png" alt="Trello marble" ></div></li>
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"><div class="aMarble aMarbleGlassEffect"value="Unity"><img class="aMarbleImg " src="Images\marbles\unity.png" alt="unity marble" ></div></li>
 
         </ul>
