--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -166,12 +166,23 @@ also cause a white space at bottom because now contributes to the height-->
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Google Map API"><div class="aMarble aMarbleGlassEffect"value="googleMapAPI"><img class="aMarbleImg " src="Images\marbles\googleMapAPI.png" alt="Google Map API marble" ></div></li>
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use MailChimp API"><div class="aMarble aMarbleGlassEffect"value="mailChimp"><img class="aMarbleImg " src="Images\marbles\mailChimp.png" alt="mailChimp API marble" ></div></li>
 <!-- Tools -->
-    <!-- No Image-->      <!-- <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Mongo Atlas"><div class="aMarble aMarbleGlassEffect"value="mongoAtlas"><img class="aMarbleImg " src="Images\marbles\mongoAtlas.png" alt="Mongo Atlas marble" ></div></li> --> -->
+
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Postman"><div class="aMarble aMarbleGlassEffect"value="postman"><img class="aMarbleImg " src="Images\marbles\postman.png" alt="Postman marble" ></div></li>
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Robo3T"><div class="aMarble aMarbleGlassEffect"value="robo3T"><img class="aMarbleImg " src="Images\marbles\robo3T.png" alt="Robo3T marble" ></div></li>
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Trello"><div class="aMarble aMarbleGlassEffect"value="trello"><img class="aMarbleImg " src="Images\marbles\trello.png" alt="Trello marble" ></div></li>
-          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use this tech"><div class="aMarble aMarbleGlassEffect"value="Unity"><img class="aMarbleImg " src="Images\marbles\unity.png" alt="unity marble" ></div></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use GitHub"><div class="aMarble aMarbleGlassEffect"value="gitHub"><img class="aMarbleImg " src="Images\marbles\gitHub.png" alt="GitHub marble" ></div></li>
+<!-- Hosting and IDE -->
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use DataFire"><div class="aMarble aMarbleGlassEffect"value="dataFire"><img class="aMarbleImg " src="Images\marbles\dataFire.png" alt="DataFire marble" ></div></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use GitPages"><div class="aMarble aMarbleGlassEffect"value="gitPages"><img class="aMarbleImg " src="Images\marbles\gitPages.jfif" alt="GitPages marble" ></div></li>
+<!-- No Image-->      <!-- <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Mongo Atlas"><div class="aMarble aMarbleGlassEffect"value="mongoAtlas"><img class="aMarbleImg " src="Images\marbles\mongoAtlas.png" alt="Mongo Atlas marble" ></div></li> -->
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Heroku"><div class="aMarble aMarbleGlassEffect"value="heroku"><img class="aMarbleImg " src="Images\marbles\heroku.png" alt="Heroku marble" ></div></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Atom"><div class="aMarble aMarbleGlassEffect"value="atom"><img class="aMarbleImg " src="Images\marbles\atom.png" alt="Atom marble" ></div></li>
+          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Visual Studio"><div class="aMarble aMarbleGlassEffect"value="visualStudio"><img class="aMarbleImg " src="Images\marbles\visualStudio.jfif" alt="Visual Studio marble" ></div></li>
+<!--methodologies not many examples -->
+<li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Agile"><div class="aMarble aMarbleGlassEffect"value="agile"><img class="aMarbleImg " src="Images\marbles\agile.png" alt="Agile marble" ></div></li>
+<li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Java"><div class="aMarble aMarbleGlassEffect"value="java"><img class="aMarbleImg " src="Images\marbles\java.png" alt="Java marble" ></div></li>
 
+<!--ADD SOME TESTING STUFF LIKE MOCKITO--->
         </ul>
     <div class="glassEffect"></div>
 
