--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -414,16 +414,16 @@ in 4.3.1 need use order and offset
 
     <div class="marbleOnShape1">
 <div class="aMarbleX"><div class="aMarbleY">
-                  <div class="aMarble aMarbleGlassEffect" name="techButton" value="nodeJS">
-          <img class="aMarbleImg " src="Images\marbles\nodejs.png" alt="nodejs marble">
+                  <div class="aMarble aMarbleGlassEffect" name="techButton" value="javascript">
+          <img class="aMarbleImg " src="Images\marbles\javascript.png" alt="Javascript marble">
 </div></div>
       </div>
     </div>
 
     <div class="marbleOnShape2">
 <div class="aMarbleX"><div class="aMarbleY">
-                <div class="aMarble aMarbleGlassEffect"  value="C#">
-          <img class="aMarbleImg " src="Images\marbles\Csharp_logo.png" alt="csharp marble" >
+                <div class="aMarble aMarbleGlassEffect"  value="cSharp">
+          <img class="aMarbleImg " src="Images\marbles\cSharp.png" alt="cSharp marble" >
 </div></div>
       </div>
     </div>
