take out c# and js from case as have it on shape

--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -146,8 +146,11 @@ also cause a white space at bottom because now contributes to the height-->
 <!-- Techs and Language -->
 
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use JQuery">   <div class="aMarble aMarbleGlassEffect"value="jquery"><img class="aMarbleImg " src="Images\marbles\jquery.png" alt="JQuery marble" ></div></li>
-          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Javascript"><div class="aMarble aMarbleGlassEffect"value="javascript"><img class="aMarbleImg " src="Images\marbles\javascript.png" alt="Javascript marble"></div></li>
-          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use C#"><div class="aMarble aMarbleGlassEffect"value="cSharp"><img class="aMarbleImg " src="Images\marbles\cSharp.png" alt="C# marble"></div></li>
+
+          <!--commented out because on page 3-->
+          <!-- <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Javascript"><div class="aMarble aMarbleGlassEffect"value="javascript"><img class="aMarbleImg " src="Images\marbles\javascript.png" alt="Javascript marble"></div></li> -->
+          <!-- <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use C#"><div class="aMarble aMarbleGlassEffect"value="cSharp"><img class="aMarbleImg " src="Images\marbles\cSharp.png" alt="C# marble"></div></li> -->
+
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use CSS"><div class="aMarble aMarbleGlassEffect"value="css"><img class="aMarbleImg " src="Images\marbles\css.png" alt="CSS marble"></div></li>
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use HTML"><div class="aMarble aMarbleGlassEffect"value="html"><img class="aMarbleImg " src="Images\marbles\html.png" alt="HTML marble"></div></li>
 
