--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -675,7 +675,7 @@ in 4.3.1 need use order and offset
         </div>
         <div class="col-sm-4 " data-toggle="tooltip" data-placement="right" title="contact me link">
           <!--replace with other website contact form-->
-          <a href="https://phy5prt.github.io/BootstrapPortfolioWebsite/contactMe/contactMe.html" target="_blank">
+          <a href="https://phy5prt.github.io/BootstrapPortfolioWebsite/contactMe/contactMe.html" target="_blank" onclick="alert('Going to contactMe page of bootstrap site')">
           <i class="far fa-envelope corner-links"></i></a>
 
 
