allProjects marble and me card

--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -164,6 +164,8 @@ also cause a white space at bottom because now contributes to the height-->
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Unity"><div class="aMarble aMarbleGlassEffect"value="unity"><img class="aMarbleImg " src="Images\marbles\unity.png" alt="Unity marble" ></div></li>
 
             <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use AJAX"><div class="aMarble aMarbleGlassEffect"value="ajax"><img class="aMarbleImg " src="Images\marbles\ajax.jpg" alt="AJAX marble" ></div></li>
+<!-- all projects -->
+                <li data-toggle="tooltip" data-placement="top" title="Click to see all projects"><div class="aMarble aMarbleGlassEffect"value="allProjects"><img class="aMarbleImg " src="Images\marbles\allProjects.png" alt="All Projects" ></div></li>
 
 <!-- API  -->
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Google OAuth"><div class="aMarble aMarbleGlassEffect"value="googleOAuth"><img class="aMarbleImg " src="Images\marbles\googleOAuth.png" alt=" Google OAuth marble" ></div></li>
@@ -294,7 +296,7 @@ maybe even ajoining a space for the marble
 
       <!--lots issues with animations and transforms on same object overwriting so a
 div for x axis one for y and the image itself for spin-->
-      <div class="philProfileMarble aMarble noHover" value="Me" id="myMarble">
+      <div class="philProfileMarble aMarble noHover" value="me" id="myMarble">
 
 
         <div class="philProfileMarbleY">
