--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -241,7 +241,7 @@ maybe even ajoining a space for the marble
 
 
              <div class="projectDescriptionSubtitle">This is me     <i class="fas fa-caret-up"></i> </div>
-                   <div class="projectExampleDescriptionText">This is an example project card. By clicking the marbles a carousel of project cards related to the technology on the marble will appear. The cards have marbles on their ribbon too. And in the bottom left hyperlinks to videos and repositories with more information on the card's project. </div>
+                   <div class="projectExampleDescriptionText">This is an example project card. Click tech marbles to see project cards of that tech. Click ribbon tech marbles to see cards that share that tech. And in the bottom left hyperlinks to videos, repositories, webapps and hosted games. </div>
               </div> <div class="cardHyperlinksArea"><div class="exampleCardHyperlinkWriting">Project's Hyperlinks</div>
 
 
